<!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<resources>
    <string name="app_name">BASU</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="no_internet_screen">You do not have Internet Connection\n right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <string name="valid_emai">Please enter a valid email address.</string>
    <string name="valid_pass">Your password must be between 8 and 16 characters.</string>
    <string name="valid_confirmpass">Password not match</string>
    <string name="event_happening">Happening now</string>
    <string name="valid_fullname">Please enter full name.</string>
    <string name="valid_address">Please enter address.</string>
    <string name="valid_phone">Please enter a valid phone number.</string>
    <string name="valid_zip">Please enter zip code.</string>
    <string name="valid_pin">Please enter valid pin</string>
    <string name="view_more">View more</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- ****** EREGNOW Project -->
    <string name="cancel_txt">Cancel</string>
    <string name="LOGIN">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="welcome_again">Welcome</string>


    <!--Gopinath-->
    <string name="txt_build_version">Version 1.0.2</string>

    <string name="txt_sing_up_to_activate">Sign Up to Activate</string>
    <string name="txt_powered_by">Powered by B A S U</string>


    <!-- Registration Activity-->
    <string name="txt_registration">Registration</string>
    <string name="txt_member_auto_assigned">Member Id - Auto Assigned</string>
    <string name="edt_name">Name</string>
    <string name="edt_email">Email</string>
    <string name="edt_phone">Phone</string>
    <string name="edt_address">Address</string>
    <string name="edt_address_optional">Address (Optional)</string>
    <string name="txt_click_to_next">Click to Next</string>
    <string name="txt_city">City</string>
    <string name="txt_state">State</string>
    <string name="txt_zip">Zip</string>
    <string name="txt_country">Country</string>
    <string name="txt_click_to_next_registration">Click to Next</string>

    <!--ConfirmEmergencyAlertActivityvity-->
    <string name="txt_user_name">Hello, David </string>
    <string name="txt_create_four_digit_screen">Create 4 Digit Secret Pin </string>
    <string name="edt_dot"> . </string>

    <!-- ProfileActivity-->
    <string name="txt_personal_profile">Personal Profile</string>
    <string name="txt_optional">(Optional)</string>
    <string name="txt_profile_user_name">David Walter</string>

    <!-- PressAndHoldActivity-->
    <string name="txt_press_and_hold_read_button">Press and Hold Read Button for 5 Sccond </string>
    <string name="txt_press_and_hold_read">Press &amp; Hold</string>


    <!--ConfirmEmergencyAlertActivity-->
    <string name="txt_confirm">Confirm</string>
    <string name="txt_confirm_emergency_alert">Emergency Alert</string>
    <string name="txt_personal_emergency_contact_alert">Personal Emergency Contacts(Optional)</string>

    <!-- ThankYouActivityvity-->

    <string name="txt_go_to_billing">Go to Billing</string>
    <string name="edt_care_make">Car Make (Optional)</string>
    <string name="edt_care_model">Car Model (Optional)</string>
    <string name="edt_care_license_plate_number">Car License Plate Number (Optional)</string>


    <!--ThankYouActivity-->
    <string name="txt_alarm_stopped">ALARM STOPPED</string>
    <string name="txt_stay_safe">STAY SAFE</string>
    <string name="txt_thank_you">Thank you</string>


    <!--   HelpOnTheWayActivityvity-->
    <string name="txt_help_is_on_the_way">Help is On The Way</string>
    <string name="txt_enter_four_digit_pin">Enter 4-Digit PIN to</string>
    <string name="txt_stop">STOP ALARM</string>
    <string name="txt_sharing_location">Sharing Location</string>


    <!-- PersonalEmergencyContactsActivity-->
    <string name="edt_context_name">Contact Name</string>
    <string name="edt_phone_no">Phone No</string>
    <string name="edt_country_code"><font size="10">Country Code</font></string>


    <string name="app_file_provider_name">.provider</string>
    <string name="valid_contact_name">Please enter name of the contact person</string>
    <string name="valid_country_code">Please select country code</string>
    <string name="valid_state_name">Please enter valid state name</string>
    <string name="valid_city_name">Please enter valid city name</string>
    <string name="valid_all_field">Please enter both contact name and phone number for any emergency contact.</string>

    <string name="valid_first_contact_name">Please enter contact name for first emergency contact.</string>
    <string name="valid_first_contact_number">Please enter contact number for first emergency contact.</string>
    <string name="valid_second_contact_name">Please enter contact name for second emergency contact.</string>
    <string name="valid_second_contact_number">Please enter contact number for second emergency contact.</string>
    <string name="valid_third_contact_name">Please enter contact name for third emergency contact.</string>
    <string name="valid_third_contact_number">Please enter contact number for third emergency contact.</string>
    <string name="valid_fourth_contact_name">Please enter contact name for fourth emergency contact.</string>
    <string name="valid_fourth_contact_number">Please enter contact number for fourth emergency contact.</string>
    <string name="valid_fifth_contact_name">Please enter contact name for fifth emergency contact.</string>
    <string name="valid_fifth_contact_number">Please enter contact number for fifth emergency contact.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
