<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_blue"
        app:layout_constraintBottom_toTopOf="@+id/scrollVIew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1.5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/basu_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_20sdp"
            android:src="@mipmap/back_arrow_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.basu.CustomView.TextViewSourceSansProRegular
            android:id="@+id/tv_register"
            style="@style/TextStyle.Title.Sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/txt_registration"
            android:textColor="@color/grey_black_1000"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_back"
            app:layout_constraintVertical_bias="0.916" />

    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollVIew"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="6.5">

            <LinearLayout
                android:id="@+id/ll_member_id"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".9"
                android:background="@drawable/rectangle_boder_for_registration_member_autoid"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:gravity="left|center"
                    android:src="@mipmap/id_icon" />

                <com.basu.CustomView.SourceSansProItalic
                    android:id="@+id/tv_member_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:gravity="left|center"
                    android:text="@string/txt_member_auto_assigned"
                    android:textColor="@color/grey_black_1000"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="italic" />
            </LinearLayout>

            <com.basu.CustomView.EditTextSourceSansPro
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:hint="@string/edt_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <com.basu.CustomView.EditTextSourceSansPro
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:hint="@string/edt_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:orientation="horizontal">

                <com.basu.CustomView.TextViewSourceSansPro
                    android:id="@+id/tv_country_code"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.25"
                    android:importantForAutofill="no"
                    android:hint="+1"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />

                <com.basu.CustomView.EditTextSourceSansPro
                    android:id="@+id/edt_phone_no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.55"
                    android:digits="0123456789"
                    android:hint="@string/edt_phone"
                    android:importantForAutofill="no"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10" />

            </LinearLayout>

            <com.basu.CustomView.EditTextSourceSansPro
                android:id="@+id/edt_address_one"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:hint="@string/edt_address"
                android:importantForAutofill="no"
                android:inputType="text" />

            <com.basu.CustomView.EditTextSourceSansPro
                android:id="@+id/edt_address_two"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:hint="@string/edt_address_optional"
                android:inputType="text" />

            <com.basu.CustomView.TextViewSourceSansPro
                android:id="@+id/tv_country"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:hint="@string/txt_country"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:orientation="horizontal"
                android:spinnerMode="dialog">

            </com.basu.CustomView.TextViewSourceSansPro>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:orientation="horizontal">

                <com.basu.CustomView.TextViewSourceSansPro
                    android:id="@+id/tv_state"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fadingEdgeLength="@dimen/_80sdp"
                    android:hint="@string/txt_state"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:importantForAutofill="no"
                    android:spinnerMode="dialog" />

                <com.basu.CustomView.EditTextSourceSansPro
                    android:id="@+id/edt_city"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fadingEdgeLength="@dimen/_80sdp"
                    android:hint="@string/txt_city"
                    android:inputType="text"
                    android:maxLines="1"
                    android:importantForAutofill="no"
                    android:spinnerMode="dialog" />

                <com.basu.CustomView.EditTextSourceSansPro
                    android:id="@+id/edt_zip"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/txt_zip"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/_20sdp"
        android:paddingRight="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollVIew"
        app:layout_constraintVertical_weight="1">

        <LinearLayout
            android:id="@+id/ll_click_to_next_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_black_1000"
            android:padding="@dimen/_10sdp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.basu.CustomView.TextViewSourceSansProRegular
                style="@style/TextStyle.Title.Sub"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="2"
                android:gravity="center|left"
                android:text="@string/txt_click_to_next_registration"
                android:textColor="@color/grey_white_1000"
                android:textSize="@dimen/_12sdp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginRight="@dimen/_5sdp"
                android:gravity="right"
                android:src="@mipmap/white_arrow" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
