<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/thank_you_background_image">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:src="@mipmap/back_arrow_icon" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:src="@mipmap/basu_icon"

                    />
            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


    <com.basu.CustomView.TextViewSourceSansProRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_thank_you"
        android:textAllCaps="true"
        android:textSize="@dimen/_22sdp"
        style="@style/TextStyle.Title.Sub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl_alarm_stopped"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_alarm_stopped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.basu.CustomView.TextViewSourceSansProRegular
            android:id="@+id/txt_press_and_hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_alarm_stopped"
            android:textAllCaps="true"
            android:textColor="@color/grey_black_1000"
            android:textSize="@dimen/_18sdp"
            style="@style/TextStyle.Title.Sub"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.basu.CustomView.TextViewRobotoBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextStyle.Heading"
            android:gravity="center"
            android:text="@string/txt_stay_safe"
            android:textColor="@color/grey_black_1000"
            android:textSize="@dimen/_28sdp"
            app:layout_constraintTop_toBottomOf="@+id/txt_press_and_hold" />


    </android.support.constraint.ConstraintLayout>

    <com.basu.CustomView.TextViewSourceSansProRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextStyle.Title.Sub"
        android:layout_marginBottom="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/txt_powered_by"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>